--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,16 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+# Diretórios de build
+target/
+
+# Arquivos de IDE
+*.iml
+.idea/
+
+# Arquivos de sistema
+.DS_Store
+*.swp
+
+# Arquivos de log
+*.log
